--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
             <div class="show-ability-tree-button"></div>
             <div class="hp-bar"></div>
             <div class="inventory">
-                
+                <div class="inventory-conteiner">
+                    
+                </div>
             </div>
         </div>
     </body>
