--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
                 <div class="ability"></div>
             </div>
 
-            <div class="show-inventory-button"></div>
+            <div class="show-inventory-button" id="showInventoryButton"></div>
             <div class="show-ability-tree-button"></div>
             <div class="hp-bar"></div>
-            <div class="inventory">
+            <div class="inventory hidden">
                 <div class="inventory-container">
                     
                 </div>
