--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
                 <div class="ability"></div>
             </div>
 
+            <div id="renderingInfo"></div>
+
             <div class="show-inventory-button" id="showInventoryButton"></div>
             <div class="show-ability-tree-button"></div>
             <div class="hp-bar"></div>
